Добавил логику заявки